# cpp-connector

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  SQream-cpp-connector.cpp  connector.cpp  connector.h  sample.cpp  socket.cpp  socket.hpp
SOCK/LinuxSock/: Makefile  SocketClient.cpp  SocketClient.hpp  SocketClient.hxx
tests/: catch_2.12.1.cpp  runtime.cpp  runtime_test.cpp  tests.cpp
